spade-tests/src/snapshots/spade_tests__typeinference__fields_on_declared_vars_can_be_used.snap
---
source: spade-tests/src/typeinference.rs
---
struct X {a: bool}

entity a() -> bool {
    decl x;
    let _: int<32> = x.a;
    let x = X(false);
    true
}


error: Expected type bool, got int<32>
  ┌─ testinput:5:22
  │
5 │     let _: int<32> = x.a;
  │                      ^^^ Expected bool
  │
  = note: Expected: bool
               Got: int<32>


